# Weighted-Interval-Scheduling

./: .gitignore  pyproject.toml
data/: test_tiny.csv  test_tiny_BSM.csv
scripts/: run_experiments.py
src/scheduling/: __init__.py  heuristics.py  io.py  model.py  weighted_interval.py
tests/: test_weighted_interval.py
